fixed sub menu overlapping

--- a/style/blog.css
+++ b/style/blog.css
@@ -68,18 +68,18 @@ h3.title a {
 div.sub {
   color: darkslategray;
   font-size: 16pt;
-  height: 60px;
+  height: auto;
 }
 
 div.sub-info {
-  height: 100%;
+  height: 60px;
   display: inline-flex;
-  padding-left: 10px;
-}
-
-#category-display {
   padding-left: 25px;
 }
+
+/* #category-display {
+  padding-left: 25px;
+} */
 
 div.sub a {
   display: inline-block;
